# toolchains

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  README.md
.github/actions/build-distributions/: action.yaml
.github/workflows/: build.yaml
cmake/modules/: Phases.cmake  Support.cmake
cmake/modules/Phases/: ToolchainsBuildNativeTools.cmake  ToolchainsBuildTargetDistributions.cmake  ToolchainsEmitProperties.cmake  ToolchainsInstall.cmake  ToolchainsPack.cmake  ToolchainsPrepareDependencies.cmake  ToolchainsTest.cmake
cmake/modules/Phases/distributions/: clang.cmake  llvm.cmake  mlir.cmake  swift.cmake  tool_clang.cmake  tool_lld.cmake
cmake/modules/Script/: CompressManifests.cmake
cmake/modules/Support/: ArgumentParsing.cmake  ConfigureFindPackages.cmake  ConfigurePaths.cmake  ConfigureTools.cmake  ConfigureTriples.cmake  ConfigureVariables.cmake
cmake/projects/toolchains-emit-properties/: CMakeLists.txt
cmake/projects/toolchains-emit-properties/cmake/: Support.cmake
cmake/projects/toolchains-emit-properties/distributions/clang/: CMakeLists.txt
cmake/projects/toolchains-emit-properties/distributions/llvm/: CMakeLists.txt
cmake/projects/toolchains-emit-properties/distributions/mlir/: CMakeLists.txt
cmake/projects/toolchains-emit-properties/distributions/swift/: CMakeLists.txt
cmake/projects/toolchains-emit-properties/distributions/tool_clang/: CMakeLists.txt
cmake/projects/toolchains-emit-properties/distributions/tool_lld/: CMakeLists.txt
cmake/projects/toolchains-pack/: CMakeLists.txt
cmake/projects/toolchains-test/: CMakeLists.txt
cmake/projects/toolchains-test/distributions/clang/: .clangd  CMakeLists.txt
cmake/projects/toolchains-test/distributions/clang/src/: main.cxx
cmake/projects/toolchains-test/distributions/llvm/: .clangd  CMakeLists.txt
cmake/projects/toolchains-test/distributions/llvm/src/: main.cxx
cmake/projects/toolchains-test/distributions/mlir/: .clangd  CMakeLists.txt
cmake/projects/toolchains-test/distributions/mlir/include/: toy_dialect.hxx
cmake/projects/toolchains-test/distributions/mlir/src/: main.cxx  toy_dialect.cxx
cmake/projects/toolchains-test/distributions/swift/: .clangd  CMakeLists.txt
cmake/projects/toolchains-test/distributions/swift/src/: main.cxx
cmake/projects/toolchains-test/distributions/tool_clang/: .clangd  CMakeLists.txt
cmake/projects/toolchains-test/distributions/tool_clang/src/: main.cxx
cmake/projects/toolchains-test/distributions/tool_lld/: .clangd  CMakeLists.txt
patches/trees/llvmorg-17.0.6/llvm-project/: 01-llvm-rename-cmake-exports-with-llvm-prefix.patch  02-llvm-export-library-properties.patch  03-llvm-install-license.patch  04-mlir-export-library-properties.patch  05-mlir-install-license.patch  06-clang-export-library-properties.patch  07-clang-install-license.patch  08-clang-install-modulemaps-with-headers.patch  09-lld-install-license.patch  series
patches/trees/swift-5.9.1/cmark/: 01-cmark-install-static-libraries.patch  02-cmark-install-headers.patch  03-cmark-install-cmake-exports.patch  series
patches/trees/swift-5.9.1/llvm-project/: 01-llvm-rename-cmake-exports-with-llvm-prefix.patch  02-llvm-export-library-properties.patch  03-llvm-install-license.patch  04-mlir-export-library-properties.patch  05-mlir-install-license.patch  06-clang-export-library-properties.patch  07-clang-install-license.patch  08-clang-install-modulemaps-with-headers.patch  09-lld-install-license.patch  10-llvm-add-options-for-static-libraries.patch  11-mlir-disable-shared-runtimes-unless-pic-enabled.patch  12-clang-remove-indexstore-exports-needing-blocks-runtime.patch  series
patches/trees/swift-5.9.1/swift/: 01-swift-rename-doxygen-target.patch  02-swift-install-headers.patch  03-swift-install-features-file.patch  04-swift-install-license.patch  05-swift-rename-dev-target-into-swift-libraries.patch  06-swift-install-cmake-exports.patch  07-swift-export-library-properties.patch  08-swift-modify-config-modules-for-relocatability.patch  09-swift-expose-version-numbers-as-cache-variables.patch  10-swift-add-options-for-static-libraries.patch  11-swift-modify-deps-to-avoid-building-clang-tools.patch  12-swift-fix-dllimport.patch  series
scripts/: apt-install-deps.sh  brew-install-deps.sh  cmake-tail.cmd  cmake-tail.sh  ctest-tail.cmd  ctest-tail.sh  delete-cmake-build.cmd  detect-release-metadata.sh  prune-github-caches.sh
